# JRSS

./: .gitignore  .prettierignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
src/: app.html  jrss.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  cover_art.rs  db.rs  feed_ingest.rs  lib.rs  main.rs  models.rs  queue.rs  reader_extract.rs
src/lib/: index.ts
src/lib/components/: ArticleBase.svelte  AudioPlayer.svelte  CoverView.svelte  FeedArticle.svelte  FeedListView.svelte  Header.svelte  QueueDrawer.svelte  QueueToggleButton.svelte  RangeInput.svelte  ReaderArticle.svelte  ReaderPane.svelte  SettingsView.svelte  Sidebar.svelte  SidebarContainer.svelte  StationEditor.svelte
src/lib/components/Article/: ArticleHeader.svelte
src/lib/components/article/: ArticleBase.svelte  ArticleHeader.svelte  FeedArticle.svelte  ReaderArticle.svelte  ReaderPane.svelte
src/lib/components/feed/: EmptyFeedView.svelte  FeedEditor.svelte  FeedListView.svelte  Header.svelte
src/lib/components/navigation/: SidebarContainer.svelte
src/lib/components/player/: AudioPlayer.svelte  AudioPlayerControls.svelte  AudioPlayerInfo.svelte  AudioPlayerVolume.svelte  AudioSeekBar.svelte  CoverView.svelte  DynamicPlayButton.svelte  QueueDrawer.svelte  QueueList.svelte  QueueToggleButton.svelte
src/lib/components/settings/: SettingsView.svelte
src/lib/components/station/: StationEditor.svelte
src/lib/components/ui/: RangeInput.svelte
src/lib/services/: feedParser.ts  feedRepository.ts  feedService.ts  tauriClient.ts
src/lib/state/: feeds.svelte.ts  items.svelte.ts  playback.svelte.ts  query-context.svelte.ts  reader.svelte.ts  selection.svelte.ts  stations.svelte.ts
src/lib/stores/: app.svelte.ts  app.ts
src/lib/types/: rss.ts
src/lib/utils/: format.ts  perfDebug.ts  tauri-menu.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
