[package]
name = "jrss"
version = "0.0.1"
description = "JRSS local-first desktop reader"
authors = ["Jasper Schavemaker"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jrss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
ammonia = "4.1"
atom_syndication = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
html-escape = "0.2"
log = "0.4"
readability-rs = "0.5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "charset", "deflate", "gzip", "rustls-tls"] }
rss = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1_smol = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
url = "2"
