[package]
name = "jrss"
version = "0.0.1"
description = "JRSS local-first desktop reader"
authors = ["Jasper Schavemaker"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jrss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
ammonia = "4.1.2"
atom_syndication = "0.12.7"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
color-thief = "0.2"
html-escape = "0.2.13"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
log = "0.4.29"
readability-rs = "0.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "blocking",
  "brotli",
  "charset",
  "deflate",
  "gzip",
  "rustls",
  "stream",
] }
rss = "2.0.12"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1_smol = "1.0.1"
sha2 = "0.11.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.52.1", features = ["sync", "time", "macros", "rt"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }

[dependencies.rodio]
version = "0.22.2"
default-features = false
features = [
  "playback",
  "symphonia-mp3",
  "symphonia-aac",
  "symphonia-wav",
  "symphonia-flac",
]
